apps/traefik/overlays/prod/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  routes:
    - $patch: replace
    - match: Host(`traefik.graytonward.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: traefik-service
          port: dashboard
